<resources>
    <string name="app_name">RTC</string>

    <!-- MainActivity -->
    <string name="drawer_menu_workitems">Workitems</string>
    <string name="drawer_menu_projects">Projects</string>
    <string name="drawer_menu_settings">Settings</string>
    <string name="drawer_menu_about">About</string>
    <string name="drawer_menu_sign_out">SignOut</string>
    <string name="title_activity_login">Sign in</string>
    <string name="please_select_project">Please select a project first.</string>

    <!-- Strings related to login fragment -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_host">Server Host</string>
    <string name="prompt_port">Port</string>
    <string name="port_range">Port must be between 0 and 65535</string>
    <string name="default_host">10.205.18.171</string>
    <string name="default_port">4567</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_test">Sign in</string>
    <string name="error_server_error">Unexpected server error, please try again</string>
    <string name="error_login_network">Can not connect to Server</string>


    <!-- Workitem list fragment -->
    <string name="workitem_title">Workitem Title</string>
    <string name="workitem_list_refresh_error">Refresh Workitem List failed.</string>
    <string name="no_workitems">No workitems</string>
    <string name="workitem_list_title">Workitems For </string>
    <string name="workitem_filter">Workitem Filter</string>
    <string name="workitem_sort">Sort</string>
    <string name="dialog_ok_button">OK</string>
    <string name="dialog_clear_filter_button">Clear</string>


    <!-- Project list fragment -->
    <string name="project_list_title">Projects</string>
    <string name="no_projects">No projects</string>
    <string name="project_refresh_error">Refresh project List Failed</string>

    <!-- Workitem detail fragment -->
    <string name="workitem_detail_title">Detail</string>
    <string name="workitem_summary">Summary: </string>
    <string name="workitem_description">Description</string>
    <string name="blank_description">This Workitem does not have a description.</string>
    <string name="workitem_type">Type: </string>
    <string name="workitem_id">ID: </string>
    <string name="workitem_priority">Priority: </string>
    <string name="workitem_severity">Severity: </string>
    <string name="workitem_refresh_error">Refresh Workitem failed.</string>
    <string name="button_retry">Retry</string>
    <string name="workitem_ownedBy">Owned By: </string>
    <string name="workitem_createdBy">Created By: </string>
    <string name="workitem_createdTime">Created Time: </string>
    <string name="workitem_plannedFor">Planed For: </string>
    <string name="workitem_foundIn">Found In: </string>
    <string name="workitem_estimate">Estimate Time: </string>
    <string name="workitem_timeSpent">Time Spent: </string>
    <string name="workitem_dueDate">Due Date: </string>
    <string name="workitem_businessValue">Business Value: </string>
    <string name="workitem_risk">Risk: </string>
    <string name="workitem_impact">Impact: </string>
    <string name="workitem_storyPoint">Story Point: </string>
    <string name="workitem_fileAgainst">File Against: </string>
    <string name="workitem_modifiedTime">Last Modified Time:</string>

    <!-- Workitem comments fragment -->
    <string name="workitem_comment_title">Comments</string>
    <string name="no_comments">No comment</string>
    <string name="prompt_comment">Add Comment</string>
    <string name="commit_comment">Commit</string>
    <string name="cancel_comment">Cancel</string>
    <string name="comment_list_refresh_error">Refresh Comment List Failed.</string>
</resources>
